Revert "fix Testimonial left Button Not Visibible"
This reverts commit 2aed54a00d2d0fc408859131af04ad07d2fefc28.

--- a/styles/testimonial.module.css
+++ b/styles/testimonial.module.css
@@ -27,10 +27,3 @@
     margin-bottom: 30px;
   }
 }
-
-@media (max-width: 400px) {
-  .custom-padding {
-    padding: 20px;
-  }
-}
-
